kopplat kontaktformuläret till appspecifikt lösenrd i gmail

--- a/myemailapp/.env
+++ b/myemailapp/.env
@@ -1,2 +1,4 @@
-EMAIL=<kontakt.instarecept@gmail.com>
-PASSWORD=<Pilens4!>
+EMAIL=kontakt.instarecept@gmail.com
+GMAIL_PASSWORD=maefpqpiigkcoypc
+
+
